tmuk-automation-tools/sync-tm-docker-repo/infra/modules/vpc/internet-gateway.tf
resource "aws_internet_gateway" "this" {
  vpc_id = aws_vpc.this.id
  tags = {
    "Name" = "${var.environment}-${var.component}-igw"
  }
}
